--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
-# OpenAI API Configuration
-# Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=your_openai_api_key_here
-
-# Optional: Model Configuration
-# MODEL_NAME=gpt-4
-# TEMPERATURE=0.1
+# GEMINI Configuration (example - DO NOT COMMIT secrets)
+GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
+GEMINI_MODEL=gemini-3-flash-preview or any other gemini model
