--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 langchain>=0.1.0
-langchain-openai>=0.0.5
+# langchain-Gemini removed; use `langchain` and GooglePalm in code instead
 langchain-community>=0.0.20
 python-dotenv>=1.0.0
 pydantic>=2.0.0
@@ -9,4 +9,5 @@ bandit>=1.7.5
 pylint>=3.0.0
 black>=23.0.0
 radon>=6.0.0
+
 
