chore: clean up codebase, remove debugging artifacts and prepare for production

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # GEMINI Configuration (example - DO NOT COMMIT secrets)
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
-GEMINI_MODEL=gemini-3-flash-preview or any other modern gemini model
+GEMINI_MODEL=gemini-1.5-flash
