--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
-        python-python: '3.9'
+        python-version: '3.9'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -26,6 +26,3 @@ jobs:
     - name: Lint with pylint
       run: |
         pylint backend/ --fail-under=8.0
-    - name: Run dry-run tests
-      run: |
-        python test_review_dry_run.py
